Updated Docs - Added Upload & Fish Search
